fontconfig: set Dejavu to default english fonts
- fix zhudou sans config

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -22,15 +22,6 @@
    <const>rgb</const>
   </edit>
  </match>
- <!-- no embeddedbitmap except for Twemoji -->
- <match target="font">
-  <test name="family" compare="not_eq">
-   <string>Twemoji</string>
-  </test>
-  <edit name="embeddedbitmap" mode="assign">
-   <bool>false</bool>
-  </edit>
- </match>
  <!-- Default system-ui fonts -->
  <match target="pattern">
   <test name="family">
@@ -47,8 +38,9 @@
   </test>
   <edit name="family" binding="strong" mode="prepend">
    <string>Noto Sans</string>
-   <string>Noto Sans CJK SC</string>
-   <string>Twemoji</string>
+   <string>Twemoji Mozilla</string>
+   <string>Font Awesome 6 Free</string>
+   <string>Font Awesome 6 Brands</string>
   </edit>
  </match>
  <!-- Default serif fonts-->
@@ -58,8 +50,9 @@
   </test>
   <edit name="family" binding="strong" mode="prepend">
    <string>Noto Serif</string>
-   <string>Noto Sans CJK SC</string>
-   <string>Twemoji</string>
+   <string>Twemoji Mozilla</string>
+   <string>Font Awesome 6 Free</string>
+   <string>Font Awesome 6 Brands</string>
   </edit>
  </match>
  <!-- Default monospace fonts-->
@@ -69,9 +62,11 @@
   </test>
   <edit name="family" binding="strong" mode="prepend">
    <string>JetBrains Mono</string>
-   <string>Noto Sans CJK SC</string>
-   <string>Symbols Nerd Font</string>
-   <string>Twemoji</string>
+   <string>Noto Sans</string>
+   <string>Twemoji Mozilla</string>
+   <string>Font Awesome 6 Free</string>
+   <string>Font Awesome 6 Brands</string>
+   <string>Symbols Nerd Font Mono</string>
   </edit>
  </match>
  <alias binding="strong">
