--- a/config/wayfire.ini
+++ b/config/wayfire.ini
@@ -1,7 +1,6 @@
 [input]
-# xkb_layout = us,fr
-# xkb_variant = dvorak,bepo
-# cursor_theme = Vanilla-DMZ
+drag_lock = true
+touchpad_cursor_speed = 0.5
 disable_touchpad_while_typing = true
 disable_touchpad_while_mouse = true
 
@@ -35,15 +34,16 @@ plugins = \
   fisheye \
   grid \
   idle \
-  invert \
   move \
   oswitch \
   place \
   resize \
   switcher \
+  simple-tile \
   window-rules \
   wm-actions \
   wrot \
+  wsets \
   zoom \
   winzoom \ # extra-plugin
   workspace-names \
@@ -55,8 +55,8 @@ plugins = \
 # https://github.com/WayfireWM/wayfire/wiki/Configuration#blur
 
 
-vwidth = 2
-vheight = 2
+vwidth = 3
+vheight = 3
 
 
 # Close focused window.
@@ -68,31 +68,6 @@ preferred_decoration_mode = server
 # xwayland
 xwayland = true
 
-[animate]
-close_animation = zoom
-duration = 400
-enabled_for = (type equals "toplevel" | (type equals "x-or" & focusable equals true))
-fade_duration = 400
-fade_enabled_for = none
-fire_color = \#B22303FF
-fire_duration = 300
-fire_enabled_for = none
-fire_particle_size = 16.000000
-fire_particles = 2000
-open_animation = fade
-random_fire_color = false
-startup_duration = 600
-zoom_duration = 500
-zoom_enabled_for = none
-
-
-[blur]
-method = kawase
-kawase_iterations =2
-kawase_offset = 3
-kawase_degrade = 5
-
-
 [decoration]
   active_color = 0.6 0.6 0.6 1.0
   border_size = 1
@@ -101,8 +76,6 @@ kawase_degrade = 5
   inactive_color = 0.3 0.3 0.3 1.0
   title_height = 0
   ignore_views = none
-
-# Mouse bindings ───────────────────────────────────────────────────────────────
 
 # Drag windows by holding down Super and left mouse button.
 [move]
@@ -123,10 +96,6 @@ modifier = <super>
 [alpha]
 modifier = <super> <alt>
 
-# Rotate windows with the mouse.
-[wrot]
-activate = <super> <ctrl> BTN_RIGHT
-
 # Fisheye effect.
 [fisheye]
 toggle = <super> <ctrl> KEY_F
@@ -144,18 +113,17 @@ toggle = <super> <ctrl> KEY_F
 # 03_xdpw=/usr/libexec/xdg-desktop-portal-wlr
 # 解决软件启动慢
 environment = dbus-update-activation-environment --systemd WAYLAND_DISPLAY DISPLAY XAUTHORITY
-xwayland01 = xprop -root -format _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
-xwayland02 = xrdb ~/.Xresources
 autostart_wf_shell = false
 panel = pkill waybar; waybar
 notifications = mako
-background = swaybg -i ~/wallpaper.jpg -m fill
-fcitx5 = env LANG=zh_CN.UTF-8 fcitx5 -d
+background = swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
+fcitx5 = env LANG=zh_CN.UTF-8 fcitx5 -d --replace
 theme = wm-gsettings
 clipboard = wl-paste --type text --watch cliphist store
 gamma = wlsunset
 idle = wm-idle
 xdg = wm-xdg
+xwayland = wm-xwayland
 
 # Example configuration:
 #
@@ -174,23 +142,17 @@ mode = cascade
 
 [command]
 
-# Start a terminal
-# https://github.com/alacritty/alacritty
-binding_terminal = <super> KEY_T
-command_terminal = alacritty 
+binding_terminal = <super> KEY_T | <super> KEY_ENTER
+command_terminal = alacritty
 
-bind_translate = <super> <shift> KEY_F
-command_translate = wl-paste | trans :zh | notify-send
-
-# Start your launcher
-# https://hg.sr.ht/~scoopta/wofi
-# Note: Add mode=run or mode=drun to ~/.config/wofi/config.
-# You can also specify the mode with --show option.
 binding_broswer = <super> KEY_B
 command_broswer = firefox
 
-binding_tofi = <super> KEY_R
-command_tofi = ~/.config/rofi/launchers/type-1/launcher.sh
+binding_launcher = <super> KEY_R
+command_launcher = wofi --show drun
+
+binding_clipboard = <super> KEY_V
+command_cliphoard = cliphist list | wofi --dmenu --hide-scroll | cliphist decode | wl-copy
 
 binding_note = <super> KEY_O
 command_note = obsidian
@@ -272,15 +234,15 @@ activate = <alt> KEY_TAB
 # Workspaces ───────────────────────────────────────────────────────────────────
 # Switch to workspace.
 [vswitch]
-binding_left = <super> KEY_H
-binding_down = <super> KEY_J
-binding_up = <super> KEY_K
-binding_right = <super> KEY_L
+binding_left = <ctrl> <super> KEY_LEFT
+binding_down = <ctrl> <super> KEY_DOWN
+binding_up = <ctrl> <super> KEY_UP
+binding_right = <ctrl> <super> KEY_RIGHT
 # Move the focused window with the same key-bindings, but add Shift.
-with_win_left = <super> <shift> KEY_H
-with_win_down = <super> <shift> KEY_J
-with_win_up = <super> <shift> KEY_K
-with_win_right = <super> <shift> KEY_L
+with_win_left = <ctrl> <super> <shift> KEY_LEFT
+with_win_down = <ctrl> <super> <shift> KEY_DOWN
+with_win_up = <ctrl> <super> <shift> KEY_UP
+with_win_right = <ctrl> <super> <shift> KEY_RIGHT
 
 # Show the current workspace row as a cube.
 #[cube]
@@ -320,14 +282,11 @@ next_output = <super> KEY_O
 # Same with the window.
 next_output_with_win = <super> <shift> KEY_O
 
-# Invert the colors of the whole output.
-[invert]
-toggle = <super> KEY_I
+[simple-tile]
+button_move = <super>
+button_resize = <super>
+inner_gap_size = 1
 
-# Rules ────────────────────────────────────────────────────────────────────────
-
-# Example configuration:
-#
 [window-rules]
 #
 # You can get the properties of your applications with the following command:
