--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -8,6 +8,7 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Sans</string>
+      <string>DejaVu Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -16,6 +17,7 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Noto Serif</string>
+      <string>DejaVu Serif</string>
     </edit>
   </match>
 
@@ -28,6 +30,7 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Zhudou Sans</string>
+      <string>DejaVu Sans</string>
       <string>Noto Sans CJK SC</string>
     </edit>
   </match>
@@ -39,6 +42,7 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>DejaVu Serif</string>
       <string>Noto Serif CJK SC</string>
     </edit>
   </match>
@@ -52,6 +56,7 @@
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
+      <string>DejaVu Sans</string>
       <string>Noto Sans CJK HK</string>
     </edit>
   </match>
@@ -63,6 +68,7 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
+      <string>DejaVu Serif</string>
       <string>Noto Serif CJK HK</string>
     </edit>
   </match>
@@ -76,6 +82,7 @@
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
+      <string>DejaVu Sans</string>
       <string>Noto Sans CJK TC</string>
     </edit>
   </match>
@@ -87,6 +94,7 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
+      <string>DejaVu Serif</string>
       <string>Noto Serif CJK TC</string>
     </edit>
   </match>
@@ -100,6 +108,7 @@
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
+      <string>DejaVu Sans</string>
       <string>Noto Sans CJK JP</string>
     </edit>
   </match>
@@ -111,6 +120,7 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
+      <string>DejaVu Serif</string>
       <string>Noto Serif CJK JP</string>
     </edit>
   </match>
@@ -124,6 +134,7 @@
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
+      <string>DejaVu Sans</string>
       <string>Noto Sans CJK KR</string>
     </edit>
   </match>
@@ -135,6 +146,7 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" binding="strong">
+      <string>DejaVu Serif</string>
       <string>Noto Serif CJK KR</string>
     </edit>
   </match>
