--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
+# vim:ft=confini:ts=4:noet:
 # Variables
-$BROWSER = firefox-developer-edition
-$TERMINAL = kitty
+$BROWSER = firefox
+$TERMINAL = alacritty
 $mainMod = SUPER
 
 # Monitor
@@ -14,18 +15,19 @@ monitor=,highrr,auto,1
 env = XDG_CURRENT_DESKTOP,hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,hyprland
+## toolkit-specific scale
+env = GDK_SCALE,2
+env = XCURSOR_SIZE,24
 
 # Hyprland Settings
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
-    kb_options = caps:escape 
-
     repeat_rate = 45
     repeat_delay = 500
 
     touchpad {
-        natural_scroll = true
+		natural_scroll = true
     }
 }
 
@@ -43,11 +45,10 @@ decoration {
     blur {
         enabled = true
     }
-    drop_shadow = false
 }
 
 animations {
-    enabled = false
+    enabled = true
 }
 
 dwindle {
@@ -69,11 +70,18 @@ misc {
 }
 
 binds {
-    workspace_back_and_forth = true
+    # workspace_back_and_forth = true
+}
+
+# unscale XWayland
+xwayland {
+    force_zero_scaling = true
 }
 
 # Startup
+exec-once = exec systemctl --user set-environment XDG_CURRENT_DESKTOP=hyprland
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd DISPLAY XDG_CURRENT_DESKTOP=hyprland WAYLAND_DISPLAY
 exec-once = dbus-update-activation-environment --all
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = pkill swaybg; swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.jpg -m fill
@@ -82,10 +90,10 @@ exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 exec-once = wm-idle
-exec-once = wm-gsetting
+exec = wm-gsetting
 exec-once = wm-xdg
-# exec-once = wm-xwayland
-exec-once = auto-start
+exec = wm-xwayland
+# exec-once = auto-start
 exec = pkill fcitx5; env LANG=zh_CN.UTF-8 fcitx5 -d --replace
 exec = pkill waybar; waybar
 
@@ -141,8 +149,6 @@ windowrulev2 = float,class:^(GoldenDict)$
 windowrulev2 = float,title:^(System Monitor|Exploer)$
 windowrulev2 = float,title:^(Htop)$
 windowrulev2 = float,title:^Blender*
-windowrulev2 = workspace 4 silent,class:^(mpv)$
-windowrulev2 = workspace 5,class:code*
 
 # Jetbrains Apps
 windowrulev2 = float,class: ^(jetbrains-.*)$,title:^(Welcome to .*)$
@@ -152,12 +158,26 @@ windowrulev2 = size 60%, 60%,class: ^(jetbrains-.*)$,title:^(Welcome to .*)$
 
 # Blur
 layerrule = blur,waybar
-windowrulev2 = noblur,class:^(.*)$
+windowrulev2 = noblur,floating:1
+
+# Pin
+windowrulev2 = bordercolor rgba(1, 1, 1, 1), pinned:1
+
+# Pot 翻译
+windowrulev2 = float, class:pot
+windowrulev2 = noborder, class:pot
+windowrulev2 = float, class:(pot), title:(Translator|OCR|PopClip|Screenshot Translate) # Translation window floating
+windowrulev2 = move cursor 0 0, class:(pot), title:(Translator|PopClip|Screenshot Translate) # Translation window follows the mouse position.
 
 # Keybind
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # bind=MODS,key,dispatcher,params
 bind = CTRL_ALT, Backspace, exit,
+
+# pot-app
+bind = SUPER_SHIFT, C, exec, curl "127.0.0.1:60828/selection_translate"
+bind = SUPER_ALT, X, exec, grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
+bind = SUPER_ALT, C, exec, grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
 
 bind = $mainMod, T, exec, $TERMINAL
 bind = SUPER_SHIFT, T, exec, [float] $TERMINAL --title "Floating Terminal"
@@ -166,12 +186,11 @@ bind = CTRL_ALT, Period, exec, $TERMINAL --title "System Monitor" -e htop
 bind = $mainMod, O, exec, hyprctl dispatch exec [workspace 3] obsidian
 bind = $mainMod, B, exec, $BROWSER
 bind = $mainMod, C, killactive
-bind = $mainMod, E, exec, $TERMINAL --title 'Exploer' -e lf
+bind = $mainMod, E, exec, $TERMINAL --title 'Exploer' -e yazi
 bind = $mainMod, F, togglefloating
 bind = $SUPER_SHIFT, F, fullscreen
-bind = $mainMod, R, exec, wofi --show drun
-bind = $mainMod, P, pseudo # dwindle
-bind = $mainMod, J, togglesplit # dwindle
+bind = $mainMod, P, pin
+bind = $mainMod, R, exec, source ~/.config/fish/config.fish & wofi --show drun
 bind = $mainMod, S, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
 bind = SUPER_SHIFT, S, exec, slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
 
@@ -257,5 +276,3 @@ binde=,j,resizeactive,0 10
 bind=,escape,submap,reset 
 # will reset the submap, meaning end the current one and return to the global one
 submap=reset
-
-# vim: set ft=confini :
