--- a/config/pacman/makepkg.conf
+++ b/config/pacman/makepkg.conf
@@ -1,4 +1,2 @@
-#PACKAGER="Maxim Baz <maximbaz@archlinux.org>"
-#GPGKEY="56C3E775E72B0C8B1C0C1BD0B5DB77409B11B601"
-
-#MAKEFLAGS="-j$(nproc)"
+PACKAGER="iFlygo <iflygo@outlook.com>"
+GPGKEY="102CAF4D17B1F4FFF5E60F49EAA85BCFCA55511D"
