--- a/config/sway/conf.d/exec.conf
+++ b/config/sway/conf.d/exec.conf
@@ -2,12 +2,12 @@
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 exec_always wm-gsetting
-exec wm-xdg
-exec wm-idle
-exec swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
+exec_always wm-xdg
+exec_always wm-idle
 exec auto-start
+exec_always swaybg -i $HOME/.config/hypr/wallpaper/WhiteSur.png -m fill
 exec env LANG=zh_CN.UTF-8 fcitx5 -d --replace
-exec kanshi
+exec_always kanshi
 exec xprop -root -format _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 exec xrdb -merge <<< 'Xft.dpi: 192'
 exec xsettingsd
