--- a/config/wofi/config
+++ b/config/wofi/config
@@ -1,19 +1,16 @@
-hide_scroll=true
 show=drun
-width=30%
-lines=3
+width=40%
+lines=5
 line_wrap=word
-term=kitty
 allow_markup=true
-always_parse_args=false
+always_parse_args=true
 show_all=true
 print_command=true
 layer=overlay
 allow_images=true
 gtk_dark=true
-prompt=Hello Wofi!
-image_size=20
-display_generic=false
+prompt=搜索
+image_size=16
 location=top
 key_expand=Tab
-insensitive=true
+matching=fuzzy
