--- a/config/yt-dlp/config
+++ b/config/yt-dlp/config
@@ -1,6 +1,6 @@
 # marked as watched about 10% at start of download
 # --mark-watched
-# --cookies-from-browser firefox:nightly
+--cookies-from-browser firefox
 # unrestricted "bestvideo" will select h264 over vp9 because of its larger size
 --format=(bestvideo[height<=3840][vcodec^=av01]/bestvideo[height<=3840][vcodec^=vp]/bestvideo[height<=3840])+bestaudio
 --socket-timeout=10
