fontconfig: 修复在英文环境下中文字体显示问题

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -62,11 +62,11 @@
   </test>
   <edit name="family" binding="strong" mode="prepend">
    <string>JetBrains Mono</string>
-   <string>Noto Sans</string>
+   <string>Noto Sans CJK SC</string>
    <string>Twemoji Mozilla</string>
+   <string>Symbols Nerd Font Mono</string>
    <string>Font Awesome 6 Free</string>
    <string>Font Awesome 6 Brands</string>
-   <string>Symbols Nerd Font Mono</string>
   </edit>
  </match>
  <alias binding="strong">
