--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -7,7 +7,9 @@
       <string>Noto Sans</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>DejaVu Sans</string>
       <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
   </match>
   <match target="pattern">
@@ -15,7 +17,9 @@
       <string>Noto Serif</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>DejaVu Serif</string>
       <string>Noto Serif</string>
+      <string>Noto Serfi CJK SC</string>
     </edit>
   </match>
 
