fontconfig: fix nerd font icon

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -39,6 +39,7 @@
   <edit name="family" binding="strong" mode="prepend">
    <string>Noto Sans</string>
    <string>Twemoji Mozilla</string>
+   <string>Symbols Nerd Font</string>
    <string>Font Awesome 6 Free</string>
    <string>Font Awesome 6 Brands</string>
   </edit>
@@ -51,6 +52,7 @@
   <edit name="family" binding="strong" mode="prepend">
    <string>Noto Serif</string>
    <string>Twemoji Mozilla</string>
+   <string>Symbols Nerd Font</string>
    <string>Font Awesome 6 Free</string>
    <string>Font Awesome 6 Brands</string>
   </edit>
