fontconfig: 更改默认的异性字体绑定

--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -3,36 +3,14 @@
 <fontconfig>
 
   <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Noto Sans</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>DejaVu Sans</string>
-      <string>Noto Sans</string>
-      <string>Noto Sans CJK SC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Noto Serif</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>DejaVu Serif</string>
-      <string>Noto Serif</string>
-      <string>Noto Serfi CJK SC</string>
-    </edit>
-  </match>
-
-  <match target="pattern">
     <test name="lang" compare="contains">
       <string>cn</string>
     </test>
     <test name="family" compare="contains">
-      <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Zhudou Sans</string>
-      <string>DejaVu Sans</string>
       <string>Noto Sans CJK SC</string>
     </edit>
   </match>
@@ -41,10 +19,9 @@
       <string>cn</string>
     </test>
     <test name="family" compare="contains">
-      <string>Noto Serif</string>
+      <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>DejaVu Serif</string>
       <string>Noto Serif CJK SC</string>
     </edit>
   </match>
@@ -54,11 +31,10 @@
       <string>zh-HK</string>
     </test>
     <test name="family">
-      <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
-      <string>DejaVu Sans</string>
       <string>Noto Sans CJK HK</string>
     </edit>
   </match>
@@ -67,10 +43,9 @@
       <string>zh-HK</string>
     </test>
     <test name="family">
-      <string>Noto Serif</string>
+      <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" binding="strong">
-      <string>DejaVu Serif</string>
       <string>Noto Serif CJK HK</string>
     </edit>
   </match>
@@ -80,11 +55,10 @@
       <string>zh-TW</string>
     </test>
     <test name="family">
-      <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
-      <string>DejaVu Sans</string>
       <string>Noto Sans CJK TC</string>
     </edit>
   </match>
@@ -93,10 +67,9 @@
       <string>zh-TW</string>
     </test>
     <test name="family">
-      <string>Noto Serif</string>
+      <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" binding="strong">
-      <string>DejaVu Serif</string>
       <string>Noto Serif CJK TC</string>
     </edit>
   </match>
@@ -106,11 +79,10 @@
       <string>ja</string>
     </test>
     <test name="family">
-      <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
-      <string>DejaVu Sans</string>
       <string>Noto Sans CJK JP</string>
     </edit>
   </match>
@@ -119,10 +91,9 @@
       <string>ja</string>
     </test>
     <test name="family">
-      <string>Noto Serif</string>
+      <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" binding="strong">
-      <string>DejaVu Serif</string>
       <string>Noto Serif CJK JP</string>
     </edit>
   </match>
@@ -132,11 +103,10 @@
       <string>ko</string>
     </test>
     <test name="family">
-      <string>Noto Sans</string>
+      <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" binding="strong">
       <string>Zhudou Sans</string>
-      <string>DejaVu Sans</string>
       <string>Noto Sans CJK KR</string>
     </edit>
   </match>
@@ -145,11 +115,34 @@
       <string>ko</string>
     </test>
     <test name="family">
-      <string>Noto Serif</string>
+      <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" binding="strong">
-      <string>DejaVu Serif</string>
       <string>Noto Serif CJK KR</string>
+    </edit>
+  </match>
+
+   <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>en</string>
+    </test>
+    <test name="family" compare="contains">
+      <string>Noto Sans CJK</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Sans</string>
+    </edit>
+  </match>
+
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>en</string>
+    </test>
+    <test name="family" compare="contains">
+      <string>Noto Serif CJK</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Serif</string>
     </edit>
   </match>
 
