--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -26,7 +26,7 @@
       <string>PingFang SC</string>
     </test>
     <edit name="family" mode="prepend" binding="strong">
-      <string>sans-serif</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
 </match>
 
