--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -24,7 +24,7 @@
  </match>
  <!-- Default system-ui fonts -->
  <match target="pattern">
-  <test name="family">
+  <test qual="any" name="family">
    <string>system-ui</string>
   </test>
   <edit name="family" binding="strong" mode="prepend">
@@ -33,50 +33,55 @@
  </match>
  <!-- Default sans-serif fonts-->
  <match target="pattern">
-  <test name="family">
+  <test qual="any" name="family">
    <string>sans-serif</string>
   </test>
   <edit name="family" binding="strong" mode="prepend">
+   <string>Noto Sans CJK SC</string>
    <string>Noto Sans</string>
-   <string>Twemoji Mozilla</string>
    <string>Symbols Nerd Font</string>
+   <string>Twemoji</string>
    <string>Font Awesome 6 Free</string>
    <string>Font Awesome 6 Brands</string>
   </edit>
  </match>
  <!-- Default serif fonts-->
  <match target="pattern">
-  <test name="family">
+  <test qual="any" name="family">
    <string>serif</string>
   </test>
   <edit name="family" binding="strong" mode="prepend">
+   <string>Noto Serif CJK SC</string>
    <string>Noto Serif</string>
-   <string>Twemoji Mozilla</string>
    <string>Symbols Nerd Font</string>
+   <string>Twemoji</string>
    <string>Font Awesome 6 Free</string>
    <string>Font Awesome 6 Brands</string>
   </edit>
  </match>
  <!-- Default monospace fonts-->
  <match target="pattern">
-  <test name="family">
+  <test qual="any" name="family">
    <string>monospace</string>
   </test>
   <edit name="family" binding="strong" mode="prepend">
    <string>JetBrains Mono</string>
-   <string>Noto Sans CJK SC</string>
-   <string>Twemoji Mozilla</string>
-   <string>Symbols Nerd Font Mono</string>
+   <string>Symbols Nerd Font</string>
+   <string>Twemoji</string>
    <string>Font Awesome 6 Free</string>
    <string>Font Awesome 6 Brands</string>
+   <string>Noto Sans Mono CJK SC</string>
   </edit>
  </match>
- <alias binding="strong">
-  <family>Twemoji Mozilla</family>
-  <accept>
-   <family>Twemoji</family>
-  </accept>
- </alias>
+ <match target="pattern">
+  <test name="family" compare="contains">
+    <string>Twemoji mozilla</string>
+  </test>
+  <edit name="family" binding="strong">
+    <string>Twemoji</string>
+  </edit>
+</match>
+
  <dir>~/.local/share/fonts</dir>
 </fontconfig>
 <!-- vim: set ft=xml fdm=marker: -->
