--- a/config/sway/config
+++ b/config/sway/config
@@ -12,11 +12,12 @@ set $FMANAGER yazi
 # xwayland disable
 default_border none
 default_floating_border none
+workspace_auto_back_and_forth yes
 # focus_follows_mouse no
 
 # floating_maximum_size 0 x 0
 
-gaps inner 0
+gaps inner 1
 gaps outer 0
 
 include ~/.config/sway/conf.d/*
