sway: add swaylock keybinding, default set to Win+L

--- a/config/sway/conf.d/bind.conf
+++ b/config/sway/conf.d/bind.conf
@@ -25,6 +25,8 @@ bindsym $MOD+Shift+minus move window scratchpad
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $MOD+minus scratchpad show
 
+bindsym $MOD+L swaylock
+
 # pot-app
 bindsym $MOD+Shift+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
 bindsym $MOD+ALT+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
