mpv: add uosc and playlistmanager plugins
playlistmanager 基本可以被uosc代替, 但是目前
逆序播放uosc没有, 所以保留.

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -74,13 +74,7 @@ profile-cond = path:match("https://v.qq.com")~=nil
 profile-restore=copy
 ytdl-raw-options = cookies-from-browser=firefox
 
-[music]
-script-opts-append=osc-visibility=always
-script-opts-append=osc-layout=slimbox
-script-opts-append=osc-seekbarstyle=knob
-script-opts-append=osc-boxalpha=50
-script-opts-append=osc-valign=0.9
-script-opts-append=osc-seekrangestyle=bar
+[Music]
 script-opts-append=playlistmanager-loadfiles_filetypes=["gif","mp3","wav","ogm","flac","m4a","wma","ogg","opus","mkv","avi","mp4","ogv","webm","rmvb","flv","wmv","mpeg","mpg","m4v","3gp"]
 video-sync=audio
 autofit-larger=50%x60%
