--- a/config/mpv/script-opts/uosc.conf
+++ b/config/mpv/script-opts/uosc.conf
@@ -221,7 +221,7 @@ chapter_range_patterns=openings:オープニング;endings:エンディング
 # Built in languages can be found in `uosc/intl`.
 # `slang` is a keyword to inherit values from `--slang` mpv config.
 # Supports paths to custom json files: `languages=~~/custom.json,slang,en`
-languages=slang,en
+languages=slang,zh-hans
 
 # A comma separated list of element IDs to disable. Available IDs:
 #   window_border, top_bar, timeline, controls, volume,
