--- a/config/nvim/.luarc.json
+++ b/config/nvim/.luarc.json
@@ -1,5 +1,19 @@
 {
-    "diagnostics.globals": [
-        "vim"
+  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+  "runtime": {
+    "version": "LuaJIT"
+  },
+  "workspace": {
+    "library": [
+      "$VIMRUNTIME",
+      "$LAZYROOT/lazy.nvim",
+      "${3rd}/luv/library"
+    ],
+    "ignoreDir": [
+      "lua/snippets"
     ]
+  },
+  "diagnostics.disable": [
+    "missing-fields"
+  ]
 }
