--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,8 +1,10 @@
+shell = "/bin/fish"
+
 [window]
-opacity = 0.98
-blur = true # only works on KDE Wayland
 dimensions = { columns = 100, lines = 30 }
 dynamic_padding = true
+opacity = 0.95
+blur = true
 
 [cursor]
 style = "Block"
