mpv: update to latest

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -6,21 +6,15 @@ cursor-autohide-fs-only = yes # don't autohide the cursor in window mode, only f
 msg-color               = yes # color log messages on terminal
 msg-module              = yes # prepend module name to log messages
 term-osd-bar            = yes # displays a progress bar on the terminal
-# ======= UI =======
+autofit-larger=70%x70%
 # ===== Video =====
 profile         = gpu-hq
 hwdec-codecs    = all
-# Enable vulkan
-# see more: https://github.com/mpv-player/mpv/issues/11739
-# vulkan need mpv 0.36+
 hwdec           = vaapi  # <vaapi|vulkan>
 gpu-api         = vulkan
 gpu-context     = waylandvk
 vo              = gpu-next # <gpu|gpu-next|dmabuf-wayland(pipewire backend)>
 vf              = format:dolbyvision=yes
-# cscale          = bilinear          # 色度还原算法；可由更好的 "KrigBilateral.glsl" 着色器取代。默认 bilinear
-# scale           = bilinear          # 放大算法，默认值同上
-# dscale          = # 缩小算法。若不设定，则自动采用 --scale 的值
 # ===== OSD =====
 osc                   = no
 border                = no
@@ -51,14 +45,17 @@ load-stats-overlay = no  # 统计信息，默认 yes
 load-scripts       = yes       # 自动挂载 /scripts/ 目录中的所有外置脚本，默认 yes。
 # ===== Scripts =====
 ytdl               = yes  # 网址解析增强，默认 yes
-script-opts        = ytdl_hook-ytdl_path=yt-dlp
+ytdl-raw-options=yes-playlist=
+# mpv will by default pass "bestvideo+bestaudio/best", which selects h264 over vp9 because of its larger size
+ytdl-format=(bestvideo[height<=3840][vcodec^=vp]/bestvideo[height<=3840])+bestaudio/(best[height<=3840][vcodec^=vp]/best[height<=3840])
 ytdl-raw-options = cookies-from-browser=firefox
+script-opts        = ytdl_hook-ytdl_path=yt-dlp
 
-# [bilibili]
-# profile-desc = Tencent videos
-# profile-cond = path:match("https://www.bilibili.com")~=nil
-# profile-restore=copy
-# ytdl-raw-options = cookies-from-browser=firefox
+[bilibili]
+profile-desc = Bilibili videos
+profile-cond = path:match("https://www.bilibili.com")~=nil
+profile-restore=copy
+ytdl-raw-options = cookies-from-browser=firefox
 
 [bilibili-live]
 profile-desc = Bilibili live videos
@@ -67,6 +64,7 @@ profile-restore = copy
 ytdl-raw-options = cookies-from-browser=firefox
 # mpegts hevc 原画 / flv avc 原画 / ...
 ytdl-format = source-7/source-0/source
+autofit-larger=70%x70%
 
 [tencent]
 profile-desc = Tencent videos
