--- a/config/mpv/script-opts/playlistmanager.conf
+++ b/config/mpv/script-opts/playlistmanager.conf
@@ -31,8 +31,8 @@ key_closeplaylist=ESC SHIFT+ENTER
 key_sortplaylist=
 key_shuffleplaylist=
 key_reverseplaylist=b
-key_loadfiles=
-key_saveplaylist=
+key_loadfiles=l
+key_saveplaylist=s
 
 #json format for replacing, check .lua for explanation
 #example json=[{"ext":{"all":true},"rules":[{"_":" "}]},{"ext":{"mp4":true,"mkv":true},"rules":[{"^(.+)%..+$":"%1"},{"%s*[%[%(].-[%]%)]%s*":""},{"(%w)%.(%w)":"%1 %2"}]},{"protocol":{"http":true,"https":true},"rules":[{"^%a+://w*%.?":""}]}]
@@ -68,7 +68,7 @@ playlist_save_filename=
 save_playlist_on_file_end=no
 
 #show file title every time a new file is loaded
-show_title_on_file_load=no
+show_title_on_file_load=yes
 #show playlist every time a new file is loaded
 show_playlist_on_file_load=no
 #close playlist when selecting file to play
@@ -81,7 +81,7 @@ sync_cursor_on_load=yes
 loop_cursor=yes
 
 #youtube-dl executable for title resolving if enabled, probably "youtube-dl" or "yt-dlp", can be absolute path
-youtube_dl_executable=youtube-dl
+youtube_dl_executable=yt-dlp
 
 #allow playlistmanager to write watch later config when navigating between files
 allow_write_watch_later_config=yes
