--- a/config/mpv/script-opts/uosc.conf
+++ b/config/mpv/script-opts/uosc.conf
@@ -78,7 +78,7 @@ progress_line_width=20
 #   fullscreen = cycle:crop_free:fullscreen:no/yes=fullscreen_exit!?Fullscreen
 #   loop-playlist = cycle:repeat:loop-playlist:no/inf!?Loop playlist
 #   toggle:{icon}:{prop} = cycle:{icon}:{prop}:no/yes!
-controls=menu,gap,subtitles,<has_many_audio>audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,speed,space,shuffle,loop-playlist,loop-file,gap,prev,command:history:script-binding memo-history?History,items,next,gap,fullscreen
+controls=menu,gap,subtitles,<has_many_audio>audio,<has_many_video>video,<has_many_edition>editions,<stream>stream-quality,gap,space,speed,space,shuffle,loop-playlist,loop-file,gap,command:history:script-binding memo-history?History,prev,items,next,gap,fullscreen
 controls_size=32
 controls_margin=8
 controls_spacing=2
@@ -155,9 +155,12 @@ color=
 # This does not affect any text, which is always rendered fully opaque. Defaults:
 # timeline=0.9,position=1,chapters=0.8,slider=0.9,slider_gauge=1,controls=0,speed=0.6,menu=1,submenu=0.4,border=1,title=1,tooltip=1,thumbnail=1,curtain=0.8,idle_indicator=0.8,audio_indicator=0.5,buffering_indicator=0.3,playlist_position=0.8
 opacity=
-# Use a faster estimation method instead of accurate measurement
-# setting this to `no` might have a noticeable impact on performance, especially in large menus.
-text_width_estimation=yes
+# A comma delimited list of features to refine at a cost of some performance impact.
+# text_width - Use a more accurate text width measurement that measures each text string individually
+#              instead of just measuring the width of known letters once and adding them up.
+# sorting    - Use filename sorting that handles non-english languages better, especially asian ones.
+#              At the moment, this is only available on windows, and has no effect on other platforms.
+refine=
 # Duration of animations in milliseconds
 animation_duration=100
 # Execute command for background clicks shorter than this number of milliseconds, 0 to disable
@@ -218,10 +221,11 @@ chapter_ranges=openings:30abf964,endings:30abf964,ads:c54e4e80
 chapter_range_patterns=openings:オープニング;endings:エンディング
 
 # Localization language priority from highest to lowest.
+# Also controls what languages are fetched by `download-subtitles` menu.
 # Built in languages can be found in `uosc/intl`.
 # `slang` is a keyword to inherit values from `--slang` mpv config.
 # Supports paths to custom json files: `languages=~~/custom.json,slang,en`
-languages=slang,zh-hans
+languages=slang,en
 
 # A comma separated list of element IDs to disable. Available IDs:
 #   window_border, top_bar, timeline, controls, volume,
