fontconfig: format code style

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -3,40 +3,40 @@
 <fontconfig>
  <!-- Rendering options -->
  <match target="font">
-  <edit name="autohint" mode="assign">
+  <edit mode="assign" name="autohint">
    <bool>false</bool>
   </edit>
-  <edit name="hinting" mode="assign">
+  <edit mode="assign" name="hinting">
    <bool>true</bool>
   </edit>
-  <edit name="hintstyle" mode="assign">
+  <edit mode="assign" name="hintstyle">
    <const>hintslight</const>
   </edit>
-  <edit name="antialias" mode="assign">
+  <edit mode="assign" name="antialias">
    <bool>true</bool>
   </edit>
-  <edit name="lcdfilter" mode="assign">
+  <edit mode="assign" name="lcdfilter">
    <const>lcddefault</const>
   </edit>
-  <edit name="rgba" mode="assign">
+  <edit mode="assign" name="rgba">
    <const>rgb</const>
   </edit>
  </match>
  <!-- Default system-ui fonts -->
  <match target="pattern">
-  <test qual="any" name="family">
+  <test name="family" qual="any">
    <string>system-ui</string>
   </test>
-  <edit name="family" binding="strong" mode="prepend">
+  <edit binding="strong" mode="prepend" name="family">
    <string>sans-serif</string>
   </edit>
  </match>
  <!-- Default sans-serif fonts-->
  <match target="pattern">
-  <test qual="any" name="family">
+  <test name="family" qual="any">
    <string>sans-serif</string>
   </test>
-  <edit name="family" binding="strong" mode="prepend">
+  <edit binding="strong" mode="prepend" name="family">
    <string>Noto Sans CJK SC</string>
    <string>Noto Sans</string>
    <string>Symbols Nerd Font</string>
@@ -47,10 +47,10 @@
  </match>
  <!-- Default serif fonts-->
  <match target="pattern">
-  <test qual="any" name="family">
+  <test name="family" qual="any">
    <string>serif</string>
   </test>
-  <edit name="family" binding="strong" mode="prepend">
+  <edit binding="strong" mode="prepend" name="family">
    <string>Noto Serif CJK SC</string>
    <string>Noto Serif</string>
    <string>Symbols Nerd Font</string>
@@ -61,10 +61,10 @@
  </match>
  <!-- Default monospace fonts-->
  <match target="pattern">
-  <test qual="any" name="family">
+  <test name="family" qual="any">
    <string>monospace</string>
   </test>
-  <edit name="family" binding="strong" mode="prepend">
+  <edit binding="strong" mode="prepend" name="family">
    <string>JetBrains Mono</string>
    <string>Symbols Nerd Font</string>
    <string>Twemoji</string>
@@ -74,14 +74,14 @@
   </edit>
  </match>
  <match target="pattern">
-  <test name="family" compare="contains">
-    <string>Twemoji mozilla</string>
+  <test compare="contains" name="family">
+   <string>Twemoji mozilla</string>
   </test>
-  <edit name="family" binding="strong">
-    <string>Twemoji</string>
+  <edit binding="strong" name="family">
+   <string>Twemoji</string>
   </edit>
-</match>
-
+ </match>
  <dir>~/.local/share/fonts</dir>
+ <dir>~/.fonts</dir>
 </fontconfig>
 <!-- vim: set ft=xml fdm=marker: -->
