--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -11,6 +11,25 @@
     </edit>
 </match>
 
+  <match target="pattern">
+    <test name="family">
+      <string>Liberation Mono</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>DejaVu Sans Mono</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+
+<match target="pattern">
+    <test name="family">
+      <string>Arial</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+
 <match target="pattern">
     <test name="family">
       <string>WenQuanYi Zen Hei</string>
