fcitx5: update to latest

--- a/config/fcitx5/conf/pinyin.conf
+++ b/config/fcitx5/conf/pinyin.conf
@@ -27,9 +27,9 @@ PreeditCursorPositionAtBeginning=True
 # 在预编辑中显示完整拼音
 PinyinInPreedit=True
 # 启用预测
-Prediction=False
+Prediction=True
 # 预测个数
-PredictionSize=3
+PredictionSize=5
 # 切换输入法时的行为
 SwitchInputMethodBehavior="Commit current preedit"
 # 选择第 2 个候选词
