--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -1,5 +1,5 @@
 # 垂直候选列表
-Vertical Candidate List=False
+Vertical Candidate List=True
 # 使用鼠标滚轮翻页
 WheelForPaging=True
 # 字体
@@ -19,17 +19,17 @@ ShowLayoutNameInIcon=True
 # 使用输入法的语言来显示文字
 UseInputMethodLanguageToDisplayText=True
 # 主题
-Theme=winter
+Theme=Fly
 # 深色主题
-DarkTheme=default-dark
+DarkTheme=Fly
 # 跟随系统浅色/深色设置
-UseDarkTheme=False
+UseDarkTheme=True
 # 当被主题和桌面支持时使用系统的重点色
 UseAccentColor=True
 # 在 X11 上针对不同屏幕使用单独的 DPI
-PerScreenDPI=False
+PerScreenDPI=True
 # 固定 Wayland 的字体 DPI
-ForceWaylandDPI=0
+ForceWaylandDPI=96
 # 在 Wayland 下启用分数缩放
 EnableFractionalScale=False
 
