--- a/config/fcitx5/conf/rime.conf
+++ b/config/fcitx5/conf/rime.conf
@@ -1,9 +1,9 @@
-# 将提交预览文字作为预编辑
-CommitPreviewAsPreedit=False
+# 预编辑模式
+PreeditMode="Composing text"
 # 共享输入状态
 InputState="Follow Global Configuration"
-# 固定嵌入预编辑文本光标在预编辑的开头
+# 将嵌入式预编辑文本的光标固定在开头
 PreeditCursorPositionAtBeginning=True
 # 取消激活输入法时提交当前文本
-Commit when deactivate=True
+Commit when deactivate=False
 
