--- a/config/fcitx5/config
+++ b/config/fcitx5/config
@@ -1,26 +1,23 @@
 [Hotkey]
-# 反复按切换键时进行轮换
+# Enumerate when press trigger key repeatedly
 EnumerateWithTriggerKeys=True
-# 轮换输入法时跳过第一个输入法
+# Temporally switch between first and current Input Method
+AltTriggerKeys=
+# Enumerate Input Method Forward
+EnumerateForwardKeys=
+# Enumerate Input Method Backward
+EnumerateBackwardKeys=
+# Skip first input method while enumerating
 EnumerateSkipFirst=False
-# 激活输入法
+# Activate Input Method
 ActivateKeys=
-# 取消激活输入法
+# Deactivate Input Method
 DeactivateKeys=
-# 切换是否使用嵌入预编辑
+# Toggle embedded preedit
 TogglePreedit=
 
 [Hotkey/TriggerKeys]
-0=Control+Shift+Shift_L
-
-[Hotkey/AltTriggerKeys]
 0=Shift+Shift_L
-
-[Hotkey/EnumerateForwardKeys]
-0=Control+Shift_L
-
-[Hotkey/EnumerateBackwardKeys]
-0=Control+Shift_R
 
 [Hotkey/EnumerateGroupForwardKeys]
 0=Super+space
@@ -41,44 +38,43 @@ TogglePreedit=
 0=Tab
 
 [Behavior]
-# 默认状态为激活
+# Active By Default
 ActiveByDefault=False
-# 共享输入状态
+# Share Input State
 ShareInputState=Program
-# 在程序中显示预编辑文本
+# Show preedit in application
 PreeditEnabledByDefault=True
-# 切换输入法时显示输入法信息
+# Show Input Method Information when switch input method
 ShowInputMethodInformation=True
-# 在焦点更改时显示输入法信息
+# Show Input Method Information when changing focus
 showInputMethodInformationWhenFocusIn=False
-# 显示紧凑的输入法信息
+# Show compact input method information
 CompactInputMethodInformation=True
-# 显示第一个输入法的信息
+# Show first input method information
 ShowFirstInputMethodInformation=True
-# 默认页大小
+# Default page size
 DefaultPageSize=5
-# 覆盖 Xkb 选项
+# Override Xkb Option
 OverrideXkbOption=False
-# 自定义 Xkb 选项
+# Custom Xkb Option
 CustomXkbOption=
 # Force Enabled Addons
 EnabledAddons=
 # Preload input method to be used by default
 PreloadInputMethod=True
-# 允许在密码框中使用输入法
+# Allow input method in the password field
 AllowInputMethodForPassword=False
-# 输入密码时显示预编辑文本
+# Show preedit text when typing password
 ShowPreeditForPassword=False
-# 保存用户数据的时间间隔（以分钟为单位）
+# Interval of saving user data in minutes
 AutoSavePeriod=30
 
 [Behavior/DisabledAddons]
 0=chttrans
 1=clipboard
 2=fcitx4frontend
-3=fullwidth
-4=kimpanel
-5=quickphrase
-6=spell
-7=table
+3=quickphrase
+4=spell
+5=table
+6=xim
 
