--- a/local/share/fcitx5/rime/rime_ice.custom.yaml
+++ b/local/share/fcitx5/rime/rime_ice.custom.yaml
@@ -10,23 +10,20 @@ patch:
     - navigator
     - express_editor
 
-  grammar:
-    language: zh-hans-t-essay-bgw
-
-  translator/contextual_suggestions: true
-
   # 拼写设定
   speller:
     # 如果不想让什么标点直接上屏，可以加在 alphabet，或者编辑标点符号为两个及以上的映射
-    alphabet: zyxwvutsrqponmlkjihgfedcbaZYXWVUTSRQPONMLKJIHGFEDCBA
-    delimiter: " '" # 第一位<空格>是拼音之间的分隔符；第二位<'>表示可以手动输入单引号来分割拼音。
+    alphabet: zyxwvutsrqponmlkjihgfedcbaZYXWVUTSRQPONMLKJIHGFEDCBA`
+    # initials 定义仅作为始码的按键，排除 ` 让单个的 ` 可以直接上屏
+    initials: zyxwvutsrqponmlkjihgfedcbaZYXWVUTSRQPONMLKJIHGFEDCBA
+    delimiter: " '"  # 第一位<空格>是拼音之间的分隔符；第二位<'>表示可以手动输入单引号来分割拼音。
     algebra:
       ### 模糊音
       # 声母
-      - derive/^([zcs])h/$1/
-      - derive/^([zcs])([^h])/$1h$2/
-      # - derive/^l/n/  # 解释：为 l 开头的拼写派生出 n 开头，即 nai 也可以输出「来、莱、赖……」
-      # - derive/^n/l/  # 可以单向或双向启用模糊音
+      - derive/^([zcs])h/$1/          # zh* ch* sh* 派生出 z* c* s*
+      - derive/^([zcs])([^h])/$1h$2/  # z* c* s*    派生出 zh* ch* sh*
+      # - derive/^l/n/  # 解释：为 l 开头的拼写派生出 n 开头，即 nai 也可以输出 lai（来、莱、赖……）
+      # - derive/^n/l/  #      lai 可输出 nai（奶、乃、奈……）。 可以单向或成对儿启用模糊音
       # - derive/^f/h/
       # - derive/^h/f/
       # - derive/^l/r/
@@ -40,19 +37,19 @@ patch:
       - derive/en$/eng/
       - derive/in$/ing/
       - derive/ing$/in/
-      - derive/ian$/iang/
-      - derive/iang$/ian/
-      - derive/uan$/uang/
-      - derive/uang$/uan/
-      - derive/ai$/an/
-      - derive/an$/ai/
-      - derive/ong$/un/
-      - derive/un$/ong/
-      - derive/ong$/on/
-      - derive/iong$/un/
-      - derive/un$/iong/
-      - derive/ong$/eng/
-      - derive/eng$/ong/
+      # - derive/ian$/iang/
+      # - derive/iang$/ian/
+      # - derive/uan$/uang/
+      # - derive/uang$/uan/
+      # - derive/ai$/an/
+      # - derive/an$/ai/
+      # - derive/ong$/un/
+      # - derive/un$/ong/
+      # - derive/ong$/on/
+      # - derive/iong$/un/
+      # - derive/un$/iong/
+      # - derive/ong$/eng/
+      # - derive/eng$/ong/
       # 拼音音节
       # - derive/^fei$/hui/
       # - derive/^hui$/fei/
@@ -67,41 +64,51 @@ patch:
       # - derive/iu$/iou/
 
       ### 超级简拼
-      - erase/^hm$/ # 响应超级简拼，取消「噷 hm」的独占
-      - erase/^m$/ # 响应超级简拼，取消「呣 m」的独占
-      - erase/^n$/ # 响应超级简拼，取消「嗯 n」的独占
-      - erase/^ng$/ # 响应超级简拼，取消「嗯 ng」的独占
-      - abbrev/^([a-z]).+$/$1/ # 超级简拼
-      - abbrev/^([zcs]h).+$/$1/ # 超级简拼中，zh ch sh 视为整体（ch'sh → 城市），而不是像这样分开（c'h's'h → 吃好睡好）。
+      - erase/^hm$/ # 响应超级简拼，取消「噷 hm」的独占（如果拼音词库有这个音节的话，雾凇里没有）
+      - erase/^m$/  # 响应超级简拼，取消「呣 m」的独占（如果拼音词库有这个音节的话，雾凇里没有）
+      - erase/^n$/  # 响应超级简拼，取消「嗯 n」的独占（如果拼音词库有这个音节的话，雾凇里没有）
+      - erase/^ng$/ # 响应超级简拼，取消「嗯 ng」的独占（如果拼音词库有这个音节的话，雾凇里没有）
+      - abbrev/^([a-z]).+$/$1/   # 超级简拼
+      - abbrev/^([zcs]h).+$/$1/  # 超级简拼中，zh ch sh 视为整体（ch'sh → 城市），而不是像这样分开（c'h's'h → 吃好睡好）。
 
-      ### v u 转换，增加对词库中「nue/nve」「qu/qv」等不同注音的支持
-      - derive/^([nl])ue$/$1ve/
+      ### v u 转换
+      # 雾凇的词库严格按照正确的 u v(ü) 注音的，支持使用 qu/qv nue/nve 来输入 qu nve
       - derive/^([nl])ve$/$1ue/
       - derive/^([jqxy])u/$1v/
+      # 以防引入的其他词库没按照正确方式注音，也做一个转换
+      - derive/^([nl])ue$/$1ve/
       - derive/^([jqxy])v/$1u/
 
       ### 自动纠错
-      # 有些规则对全拼简拼混输有副作用：如「x'ai 喜爱」被纠错为「xia 下」
+  ########## START 这几个有副作用的规则圈起来，方便取舍
+      # 这些规则对全拼简拼混输有副作用：如「x'ai 喜爱」被纠错为「xia 下」
       # zh、ch、sh
-      - derive/([zcs])h(a|e|i|u|ai|ei|an|en|ou|uo|ua|un|ui|uan|uai|uang|ang|eng|ong)$/h$1$2/ # hzi → zhi
-      - derive/([zcs])h([aeiu])$/$1$2h/ # zih → zhi
+      - derive/([zcs])h(a|e|i|u|ai|ei|an|en|ou|uo|ua|un|ui|uan|uai|uang|ang|eng|ong)$/h$1$2/  # hzi → zhi
+      - derive/([zcs])h([aeiu])$/$1$2h/  # zih → zhi
+      # # ia
+      - derive/([qjx])ia$/$1ai/  # qai → qia
+      # # an
+      - derive/([wrtypsdfghklzcbnm])an$/$1na/  # dna → dan
+      # # en
+      - derive/([wrpsdfghklzcbnm])en$/$1ne/  # rne → ren
+      # # in
+      - derive/([qypjlxbnm])in$/$1ni/  # qni → qin
+      # # un
+      - derive/([qrtysdghjklzxc])un$/$1nu/  # qnu → qun
+      # # ian
+      - derive/([qtpdjlxbnm])ian$/$1ain/
+  ########## END
       # ai
-      - derive/^([wghk])ai$/$1ia/ # wia → wai
-      # ia
-      - derive/([qjx])ia$/$1ai/ # qai → qia
+      - derive/^([wghk])ai$/$1ia/  # wia → wai
       # ei
-      - derive/([wfghkz])ei$/$1ie/
+      - derive/([wfghkz])ei$/$1ie/  # wie → wei
       # ie
-      - derive/([jqx])ie$/$1ei/
+      - derive/([jqx])ie$/$1ei/  # jei → jie
       # ao
       - derive/([rtypsdghklzcbnm])ao$/$1oa/
       # ou
       - derive/([ypfm])ou$/$1uo/
       # uo（无）
-      # an
-      - derive/([wrtypsdfghklzcbnm])an$/$1na/
-      # en
-      - derive/([wrpsdfghklzcbnm])en$/$1ne/
       # ang
       - derive/([wrtypsdfghklzcbnm])ang$/$1nag/
       - derive/([wrtypsdfghklzcbnm])ang$/$1agn/
@@ -121,11 +128,6 @@ patch:
       - derive/([rtsghkzc])ui$/$1iu/
       # iu
       - derive/([qjlxnm])iu$/$1ui/
-      # ian
-      - derive/([qtpdjlxbnm])ian$/$1ain/
-      # - derive/([qtpdjlxbnm])ian$/$1ina/ # 和「李娜、蒂娜、缉拿」等常用词有冲突
-      # in
-      - derive/([qypjlxbnm])in$/$1ni/
       # iang
       - derive/([qjlxn])iang$/$1aing/
       - derive/([qjlxn])iang$/$1inag/
@@ -137,8 +139,6 @@ patch:
       # uan
       - derive/([qrtysdghjklzxcn])uan$/$1aun/
       # - derive/([qrtysdghjklzxcn])uan$/$1una/ # 和「去哪、露娜」等常用词有冲突
-      # un
-      - derive/([qrtysdghjklzxc])un$/$1nu/
       # ue
       - derive/([nlyjqx])ue$/$1eu/
       # uang
@@ -153,6 +153,6 @@ patch:
       - derive/([jqx])iong$/$1oign/
       # 其他
       - derive/([rtsdghkzc])o(u|ng)$/$1o/ # do → dou|dong
-      - derive/ong$/on/ # lon → long
+      - derive/(.+)ong$/$1on/ # lon → long
       - derive/([tl])eng$/$1en/ # ten → teng
       - derive/([qwrtypsdfghjklzxcbnm])([aeio])ng$/$1ng/ # lng → lang、leng、ling、long
