chore: update mpv config

--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -1,10 +1,7 @@
 # [Default]
 
 # ===== Terminal =====
-cursor-autohide         = 200 # autohides the cursor after 200ms
 cursor-autohide-fs-only = yes # don't autohide the cursor in window mode, only fullscreen
-msg-color               = yes # color log messages on terminal
-msg-module              = yes # prepend module name to log messages
 term-osd-bar            = yes # displays a progress bar on the terminal
 autofit-larger=70%x70%
 # ===== Video =====
@@ -36,8 +33,7 @@ audio-pitch-correction = yes       # 变速播放时的音调修正，默认 yes
 sub-scale-with-window = yes
 # ===== Shaders =====
 #初始加载多个着色器的示例写法
-glsl-shaders         = "~~/shaders/KrigBilateral.glsl"
-gpu-shader-cache-dir = "~~/.cache/shader"
+# glsl-shaders         = "~~/shaders/KrigBilateral.glsl"
 # ===== Others =====
 load-auto-profiles = auto # <yes|no|默认auto> 新版条件配置预设（使用旧版外挂的用户记得禁用）
 load-osd-console   = yes  # 控制台，默认 yes
@@ -51,13 +47,13 @@ ytdl-format=(bestvideo[height<=3840][vcodec^=vp]/bestvideo[height<=3840])+bestau
 ytdl-raw-options = cookies-from-browser=firefox
 script-opts        = ytdl_hook-ytdl_path=yt-dlp
 
-[bilibili]
+[Bilibili]
 profile-desc = Bilibili videos
 profile-cond = path:match("https://www.bilibili.com")~=nil
 profile-restore=copy
 ytdl-raw-options = cookies-from-browser=firefox
 
-[bilibili-live]
+[Bilibili-live]
 profile-desc = Bilibili live videos
 profile-cond = path:match("https://live.bilibili.com")~=nil
 profile-restore = copy
@@ -66,7 +62,7 @@ ytdl-raw-options = cookies-from-browser=firefox
 ytdl-format = source-7/source-0/source
 autofit-larger=70%x70%
 
-[tencent]
+[Tencent]
 profile-desc = Tencent videos
 profile-cond = path:match("https://v.qq.com")~=nil
 profile-restore=copy
