chore: update sway config to latest

--- a/config/sway/conf.d/bind.conf
+++ b/config/sway/conf.d/bind.conf
@@ -8,13 +8,14 @@ bindsym F11 fullscreen toggle
 
 # Use wev can get key name;
 floating_modifier $MOD normal
+
 # Exit Sway
-bindsym Ctrl+Alt+Backspace exit
+bindsym Ctrl+Alt+Delete exit
+
 bindsym $MOD+F floating toggle
 bindsym $MOD+P sticky toggle
-bindsym Alt+Tab focus next
+
 # Kill focused window
-bindsym $MOD+C kill
 bindsym $MOD+Q kill
 bindsym Alt+F4 kill
 # Reload the configuration file
@@ -25,32 +26,36 @@ bindsym $MOD+Shift+minus move window scratchpad
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $MOD+minus scratchpad show
 
-bindsym $MOD+L swaylock
+bindsym $MOD+L exec swaylock
 
 # pot-app
-bindsym $MOD+Shift+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
-bindsym $MOD+ALT+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
-bindsym $MOD+Z exec curl "127.0.0.1:60828/selection_translate"
+bindsym --no-repeat $MOD+Shift+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_recognize?screenshot=false"
+bindsym --no-repeat $MOD+ALT+Z exec grim -g "$(slurp)" ~/.cache/com.pot-app.desktop/pot_screenshot_cut.png && curl "127.0.0.1:60828/ocr_translate?screenshot=false"
+bindsym --no-repeat $MOD+Z exec curl "127.0.0.1:60828/selection_translate"
 
-bindsym Ctrl+Shift+Escape exec $TERMINAL --title "System Monitor" -e $TOP
-bindsym Ctrl+Alt+Period exec $TERMINAL --title "System Monitor" -e $TOP
-bindsym $MOD+E exec $TERMINAL --title "Explore" -e $FMANAGER $HOME
+# system apps
+bindsym --no-repeat Ctrl+Shift+Escape exec $TERMINAL --title "System Monitor" --class "org.kde.plasma-systemmonitor" -e $TOP
+bindsym --no-repeat Ctrl+Alt+Period exec $TERMINAL --title "System Monitor" --class "org.kde.plasma-systemmonitor" -e $TOP
+bindsym --no-repeat $MOD+E exec $TERMINAL --title "Explore" --class "Explore" -e $FMANAGER $HOME
 
 # Start a terminal
-bindsym $MOD+T exec $TERMINAL
-bindsym $MOD+Return exec $TERMINAL
-bindsym $MOD+Shift+T exec $TERMINAL --title "Float Terminal"
+bindsym --no-repeat $MOD+T exec $TERMINAL
+bindsym --no-repeat $MOD+Return exec $TERMINAL
+bindsym --no-repeat $MOD+Shift+T exec $TERMINAL --title "Float Terminal"
 
-# Start your launcher
-bindsym $MOD+R exec wofi --show drun
-bindsym $MOD+Shift+R exec wofi --show run
-bindsym $MOD+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
-bindsym $MOD+Shift+S exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
+# Start app launcher
+bindsym --no-repeat $MOD+R exec fuzzel
 
-bindsym $MOD+V exec copyq toggle
+# screenshot
+bindsym --no-repeat $MOD+X exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | wl-copy --type image/png
+bindsym --no-repeat $MOD+Shift+X exec slurp -b ff00ff20 -B ff00ff20 -c 00dffc -o | grim -g - - | swappy -f - -o -  | wl-copy --type image/png
+
+# screenrec
+bindsym $MOD+ESCape exec 'pkill wf-recorder && waybar-signal recorder'
+bindsym --no-repeat $MOD+S exec recorder
+bindsym --no-repeat $MOD+V exec copyq toggle
 
 # Keyboard Control Function
-# @TODO: move this to a wrap function script, use wpctl and etc
 bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindsym --locked XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindsym --locked XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -78,16 +83,16 @@ bindsym $MOD+Shift+Right move right
 ### Workspaces:
 
 # Switch to workspace
-bindsym $MOD+1 workspace number 1
-bindsym $MOD+2 workspace number 2
-bindsym $MOD+3 workspace number 3
-bindsym $MOD+4 workspace number 4
-bindsym $MOD+5 workspace number 5
-bindsym $MOD+6 workspace number 6
-bindsym $MOD+7 workspace number 7
-bindsym $MOD+8 workspace number 8
-bindsym $MOD+9 workspace number 9
-bindsym $MOD+0 workspace number 10
+bindsym --no-repeat $MOD+1 workspace number 1
+bindsym --no-repeat $MOD+2 workspace number 2
+bindsym --no-repeat $MOD+3 workspace number 3
+bindsym --no-repeat $MOD+4 workspace number 4
+bindsym --no-repeat $MOD+5 workspace number 5
+bindsym --no-repeat $MOD+6 workspace number 6
+bindsym --no-repeat $MOD+7 workspace number 7
+bindsym --no-repeat $MOD+8 workspace number 8
+bindsym --no-repeat $MOD+9 workspace number 9
+bindsym --no-repeat $MOD+0 workspace number 10
 # Move focused container to workspace
 bindsym $MOD+Shift+1 move container to workspace number 1
 bindsym $MOD+Shift+2 move container to workspace number 2
