--- a/config/sway/conf.d/for_window.conf
+++ b/config/sway/conf.d/for_window.conf
@@ -12,8 +12,6 @@ for_window [window_role = "dialog"] floating enable
 for_window [window_type = "dialog"] floating enable
 for_window [window_type = "menu"] floating enable
 
-# Test rules
-
 # Floating Apps
 for_window [app_id="org.kde.polkit-kde-authentication-agent-1"] floating enable
 for_window [app_id="org.qbittorrent.qBittorrent"] floating enable
@@ -23,6 +21,7 @@ for_window [app_id="org.wireshark.Wireshark"] floating enable
 for_window [app_id="com.obsproject.Studio"] floating enable
 for_window [app_id="org.telegram.desktop"] floating enable
 for_window [app_id="org.pipewire.Helvum"] floating enable
+for_window [app_id="dev.warp.Warp"] floating enable
 for_window [app_id="remote-viewer"] floating enable
 for_window [app_id="timeshift-gtk"] floating enable
 for_window [app_id="thunderbird"] floating enable
@@ -33,7 +32,6 @@ for_window [app_id="anki"] floating enable
 # Neovide
 for_window [app_id="neovide"] {
 	floating enable
-  resize set 85ppt 85ppt
 }
 
 # MPV
@@ -42,15 +40,18 @@ for_window [app_id="mpv"] {
 }
 
 # JetBrains APPS
-for_window [class="^(com.intellij.idea.Main)$" title="^(Welcome to*)$"] {
+for_window [class="^(jetbrains-.*)$" title="^(Welcome to .*)$"] {
     floating enable
-    resize set 70ppt 70ppt
+}
+
+for_window [app_id="Alacritty" floating] {
+	border pixel 1
 }
 
 # Floating System Utils
 for_window [title="^(Float Terminal|System Monitor|Explore)$"] {
     floating enable
-    resize set 70ppt 70ppt
+    resize set 70ppt
 }
 
 # Blender
@@ -93,7 +94,13 @@ for_window [app_id="^firefox.*$" title="^Picture-in-Picture$"] {
 for_window [app_id="^firefox.*$" title="^Library$"] floating enable
 
 # pot-app
-for_window [app_id="pot"] floating enable
+for_window [app_id="pot"] {
+	floating enable
+	border none
+}
+
+# clash-verge
+for_window [app_id="clash-verge"] floating enable
 
 # Steam
 ## 设置
