--- a/config/sway/config
+++ b/config/sway/config
@@ -3,22 +3,20 @@ include /etc/sway/config.d/*
 
 ### Variables
 set $MOD Mod4
-set $TERMINAL alacritty
+set $TERMINAL kitty
 set $BROWSER firefox
 set $TOP htop
 set $FMANAGER yazi
+set $RECORDER wf-recorder
+
+# xwayland disable
 
 ### General
-# xwayland disable
-default_border none
-default_floating_border none
+gaps inner 0
+gaps outer 1
+smart_borders on
+default_border pixel 1
 workspace_auto_back_and_forth yes
-# focus_follows_mouse no
-
-# floating_maximum_size 0 x 0
-
-gaps inner 1
-gaps outer 0
 
 include ~/.config/sway/conf.d/*
 
