chore: update fontconfig to latest

--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -122,28 +122,59 @@
     </edit>
   </match>
 
-   <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>en</string>
-    </test>
-    <test name="family" compare="contains">
-      <string>Noto Sans CJK</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Sans</string>
-    </edit>
-  </match>
+  <!-- <match target="pattern">-->
+  <!--  <test name="lang" compare="contains">-->
+  <!--    <string>en</string>-->
+  <!--  </test>-->
+  <!--  <test name="family" compare="contains">-->
+  <!--    <string>Noto Sans CJK SC</string>-->
+  <!--  </test>-->
+  <!--  <edit name="family" mode="prepend" binding="strong">-->
+  <!--    <string>Noto Sans</string>-->
+  <!--  </edit>-->
+  <!--</match>-->
+  <!--<match target="pattern">-->
+  <!--  <test name="lang" compare="contains">-->
+  <!--    <string>en</string>-->
+  <!--  </test>-->
+  <!--  <test name="family" compare="contains">-->
+  <!--    <string>Noto Serif CJK SC</string>-->
+  <!--  </test>-->
+  <!--  <edit name="family" mode="prepend" binding="strong">-->
+  <!--    <string>Noto Serif</string>-->
+  <!--  </edit>-->
+  <!--</match>-->
 
-  <match target="pattern">
-    <test name="lang" compare="contains">
-      <string>en</string>
-    </test>
-    <test name="family" compare="contains">
-      <string>Noto Serif CJK</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>Noto Serif</string>
-    </edit>
-  </match>
+  <alias>
+    <family>sans-serif</family>
+    <prefer>
+      <family>Noto Sans CJK SC</family>
+      <family>Noto Sans CJK JP</family>
+      <family>Noto Sans CJK KR</family>
+      <family>Noto Sans CJK TC</family>
+      <family>Noto Sans CJK HK</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>serif</family>
+    <prefer>
+      <family>Noto Serif CJK SC</family>
+      <family>Noto Serif CJK JP</family>
+      <family>Noto Serif CJK KR</family>
+      <family>Noto Serif CJK TC</family>
+      <family>Noto Serif CJK HK</family>
+    </prefer>
+  </alias>
+  <alias>
+    <family>monospace</family>
+    <prefer>
+      <family>Noto Sans Mono CJK SC</family>
+      <family>Noto Sans Mono CJK JP</family>
+      <family>Noto Sans Mono CJK KR</family>
+      <family>Noto Sans Mono CJK TC</family>
+      <family>Noto Sans Mono CJK HK</family>
+    </prefer>
+  </alias>
+
 
 </fontconfig>
