--- a/config/fontconfig/conf.d/02-noto-cjk.conf
+++ b/config/fontconfig/conf.d/02-noto-cjk.conf
@@ -11,6 +11,7 @@
     </test>
     <edit name="family" mode="prepend" binding="strong">
       <string>Zhudou Sans</string>
+      <string>HarmonyOS Sans</string>
       <string>Noto Sans CJK SC</string>
     </edit>
   </match>
@@ -122,28 +123,28 @@
     </edit>
   </match>
 
-  <!-- <match target="pattern">-->
-  <!--  <test name="lang" compare="contains">-->
-  <!--    <string>en</string>-->
-  <!--  </test>-->
-  <!--  <test name="family" compare="contains">-->
-  <!--    <string>Noto Sans CJK SC</string>-->
-  <!--  </test>-->
-  <!--  <edit name="family" mode="prepend" binding="strong">-->
-  <!--    <string>Noto Sans</string>-->
-  <!--  </edit>-->
-  <!--</match>-->
-  <!--<match target="pattern">-->
-  <!--  <test name="lang" compare="contains">-->
-  <!--    <string>en</string>-->
-  <!--  </test>-->
-  <!--  <test name="family" compare="contains">-->
-  <!--    <string>Noto Serif CJK SC</string>-->
-  <!--  </test>-->
-  <!--  <edit name="family" mode="prepend" binding="strong">-->
-  <!--    <string>Noto Serif</string>-->
-  <!--  </edit>-->
-  <!--</match>-->
+  <match target="pattern">
+   <test name="lang" compare="contains">
+     <string>en</string>
+   </test>
+   <test name="family" compare="contains">
+     <string>Noto Sans CJK SC</string>
+   </test>
+   <edit name="family" mode="prepend" binding="strong">
+     <string>Noto Sans</string>
+   </edit>
+  </match>
+  <match target="pattern">
+   <test name="lang" compare="contains">
+     <string>en</string>
+   </test>
+   <test name="family" compare="contains">
+     <string>Noto Serif CJK SC</string>
+   </test>
+   <edit name="family" mode="prepend" binding="strong">
+     <string>Noto Serif</string>
+   </edit>
+  </match>
 
   <alias>
     <family>sans-serif</family>
@@ -175,6 +176,5 @@
       <family>Noto Sans Mono CJK HK</family>
     </prefer>
   </alias>
-
 
 </fontconfig>
